feat(webflux): switch to non-blocking reactive endpoints